fixed the "stuck" bug
I did it to myself---submit date button was disabled while fetching, but
I wasn't re-enabling it when bad fetch.  Fixed.

Also message about no date for dates with no date

Also other stuff.

Seems to be working okay

--- a/src/static/styles/_datepicker.scss
+++ b/src/static/styles/_datepicker.scss
@@ -8,7 +8,10 @@ $datepicker-border-color: #CCC;
 $datepicker-row-border-color: #F2F2F2;
 
 .#{$datepicker-ns}container {
-  position: relative;
+    position: relative;
+    display: inline-block;
+    max-width: 150px;
+    margin: 0px 20px 0px 0px;
 }
 
 .#{$datepicker-ns}input:focus {
