--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -26,7 +26,9 @@ $color-teal-base: #f5f0e1;
 $black: #111;
 
 body {
-  background-color: $color-teal-base;
+    background-color: $color-teal-base;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
 }
 
 div.container , div.btn-container{
@@ -59,6 +61,18 @@ text.maplabel {
     color: $black;
 }
 
+label.slider {
+    margin: 12px;
+    display: block;
+}
+
+div.badday {
+    color: red;
+    min-height: 20px;
+}
+div.goodday{
+    min-height: 20px;
+}
 .widget,.controller,.col {
     margin-left: auto;
     margin-right: auto;
